--- a/0.basic.yml
+++ b/0.basic.yml
@@ -1,8 +1,5 @@
 --- #
 - hosts: servers
-  remote_user: ansible
-  become: yes
-  become_method: sudo
   tasks:
   - name: Querying for Telnet Install
-    yum: pkg=telnet state=absent update_cache=true
+    yum: pkg=nmap state=present
