--- a/2.VarSubstitution.yml
+++ b/2.VarSubstitution.yml
@@ -6,7 +6,7 @@
     connection: ssh
     gather_facts: '{{ gather }}'
     vars:
-        myHosts: servers
+        myHosts: all
         gather: yes
         pkg: telnet  
         sudoUser: ansible    
