--- a/5.debug.yaml
+++ b/5.debug.yaml
@@ -1,13 +1,7 @@
 --- # Debugging
 -   hosts: '{{ myHosts }}'
-    remote_user: ansible
-    become: yes
-    become_method: sudo
-    connection: ssh
-    gather_facts: '{{ gather }}'
     vars:
-        myHosts: servers
-        gather: yes
+        myHosts: master
         pkg: telnet
     tasks:
     - name: Install telnet server on centos
