--- a/9.MultipleServers.yml
+++ b/9.MultipleServers.yml
@@ -1,22 +1,12 @@
 --- # Multiple Tasks on Multiple Servers in Single Playbook
-- hosts: servers
-  remote_user: ansible
-  become: yes
-  become_method: sudo
-  connection: ssh
-  gather_facts: yes    
+- hosts: Master
   tasks:
   - name: Install httpd on centos Servers
     yum: pkg=lynx state=installed update_cache=true
   - name: Querying for Telnet Install
     yum: pkg=telnet state=present update_cache=true
  
-- hosts: local
-  remote_user: ansible
-  become: yes
-  become_method: sudo
-  connection: ssh
-  gather_facts: yes    
+- hosts: agents
   tasks:
   - name: Install telnet on Local Server
     yum: pkg=telnet state=installed update_cache=true
