--- a/tagsbasic.yml
+++ b/tagsbasic.yml
@@ -1,17 +1,14 @@
----
-# this playbook for tags example
-# command to execute: ansible-playbook tags.yml --tags first
-- name: tags
-  hosts: master
-  tasks:
+--- # command to execute: ansible-playbook tags.yml --tags first
+-   hosts: master
+    tasks:
     - debug:
-        msg: " this is first task"
+        msg: " this is 1st task"
       tags: first
 
     - debug:
-        msg: " this is second task"
+        msg: " this is 2nd task"
       tags: second
 
     - debug:
-        msg: "this is third taks"
+        msg: " this is 3rd task"
       tags: third
