--- a/vault/ansible-vault.yml
+++ b/vault/ansible-vault.yml
@@ -7,5 +7,5 @@
   tasks:
   - name: clone a repo
     git:
-      repo: https://github.com/{{ password }}/Ansible-Roles
-      dest: /opt/Ansible-Roles
+      repo: https://github.com/{{ password }}/AnsiblePlaybooks
+      dest: /opt/AnsiblePlaybooks
